feat (main) Add Boilerplate CSS elements

--- a/index.html
+++ b/index.html
@@ -2,9 +2,46 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Betty Bitchin' Ice Cream</title>
+    <link rel="stylesheet" href="/main.css">
   </head>
   <body>
+    <header>
+      <nav>
+        <h1>B.B.I.C</h1>
+      </nav>
+    </header>
+    <main id="thirds">
+      <p>
+        Now Fry, it's been a few years since medical school, so remind me. Disemboweling in your species: fatal or non-fatal?
+        Soothe us with sweet lies. You can see how I lived before I met you. Yes. You gave me a dollar and some candy. Switzerland is small and neutral! We are more like Germany, ambitious and misunderstood!
+        Um, is this the boring, peaceful kind of taking to the streets? OK, if everyone's finished being stupid. Say it in Russian! Stop! Don't shoot fire stick in space canoe! Cause explosive decompression!
+        Hi, I'm a naughty nurse, and I really need someone to talk to. $9.95 a minute
+        What kind of a father would I be if I said no? Ooh, name it after me! Say it in Russian! We can't compete with Mom! Her company is big and evil! Ours is small and neutral! No, I'm Santa Claus!
+        Oh, you're a dollar naughtier than most.
+        Oh right. I forgot about the battle.
+        Shut up and get to the point!
+        Have you ever tried just turning off the TV, sitting down with your children, and hitting them?
+        Bite my shiny metal ass. For example, if you killed your grandfather, you'd cease to exist! You don't know how to do any of those. Hello, little man. I will destroy you! It must be wonderful. Okay, it's 500 dollars, you have no choice of carrier, the battery can't hold the charge and the reception isn't very…
+        Kids don't turn rotten just from watching TV.
+        File not found.
+        I saw you with those two "ladies of the evening" at Elzars. Explain that.
+        Oh yeah, good luck with that. She also liked to shut up! A true inspiration for the children. Leela, are you alright? You got wanged on the head.
+        Aww, it's true. I've been hiding it for so long. Look, last night was a mistake. I wish! It's a nickel. No, she'll probably make me do it.
+        You won't have time for sleeping, soldier, not with all the bed making you'll be doing. When I was first asked to make a film about my nephew, Hubert Farnsworth, I thought "Why should I?" Then later, Leela made the film. But if I did make it, you can bet there would have been more topless women on motorcycles. Roll film!
+        There's one way and only one way to determine if an animal is intelligent. Dissect its brain! You won't have time for sleeping, soldier, not with all the bed making you'll be doing. The alien mothership is in orbit here. If we can hit that bullseye, the rest of the dominoes will fall like a house of cards. Checkmate.
+        You seem malnourished. Are you suffering from intestinal parasites? Well I'da done better, but it's plum hard pleading a case while awaiting trial for that there incompetence. Large bet on myself in round one.
+        Tell her she looks thin. For example, if you killed your grandfather, you'd cease to exist! Professor, make a woman out of me. I've been there. My folks were always on me to groom myself and wear underpants. What am I, the pope?
+        Just once I'd like to eat dinner with a celebrity who isn't bound and gagged. Aww, it's true. I've been hiding it for so long. Robot 1-X, save my friends! And Zoidberg! And I'm his friend Jesus. Yeah, and if you were the pope they'd be all, "Straighten your pope hat." And "Put on your good vestments."
+        Uh, is the puppy mechanical in any way? Guards! Bring me the forms I need to fill out to have her taken away! I haven't felt much of anything since my guinea pig died. Throw her in the brig. Good news, everyone! I've taught the toaster to feel love!
+        Ven ve voke up, ve had zese wodies. The key to victory is discipline, and that means a well made bed. You will practice until you can make your bed in your sleep. I saw you with those two "ladies of the evening" at Elzars. Explain that.
+        I am the man with no name, Zapp Brannigan! Throw her in the brig. I found what I need. And it's not friends, it's things. You guys go on without me! I'm going to go… look for more stuff to steal!
+        THE BIG BRAIN AM WINNING AGAIN! I AM THE GREETEST! NOW I AM LEAVING EARTH, FOR NO RAISEN! Say what? Then throw her in the laundry room, which will hereafter be referred to as "the brig". OK, if everyone's finished being stupid.
+      </p>
+
+    </main>
+    <footer>
+    </footer>
 
   </body>
 </html>
