feat (boilerplate) Add boilerplate, Add CSS elements

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Betty Bitchin' Ice Cream</title>
-    <link rel="stylesheet" href="/main.css">
+    <link rel="stylesheet" href="main.css">
   </head>
   <body>
     <header>
@@ -11,7 +11,9 @@
         <h1>B.B.I.C</h1>
       </nav>
     </header>
+    <div class="top">
     <main id="thirds">
+      <div class="float-left cf">
       <p>
         Now Fry, it's been a few years since medical school, so remind me. Disemboweling in your species: fatal or non-fatal?
         Soothe us with sweet lies. You can see how I lived before I met you. Yes. You gave me a dollar and some candy. Switzerland is small and neutral! We are more like Germany, ambitious and misunderstood!
@@ -39,7 +41,21 @@
         THE BIG BRAIN AM WINNING AGAIN! I AM THE GREETEST! NOW I AM LEAVING EARTH, FOR NO RAISEN! Say what? Then throw her in the laundry room, which will hereafter be referred to as "the brig". OK, if everyone's finished being stupid.
       </p>
 
+      <div class="flavors cf">
+        <table class="WD">
+          <thead>
+            <tr>
+              Flavor country
+            </tr>
+            <tr>
+              Cal Count
+            </tr>
+          </thead>
+        </table>
+      </div>
+      </div>
     </main>
+    </div>
     <footer>
     </footer>
 
