feat (main) Add better CSS stylings

--- a/index.html
+++ b/index.html
@@ -4,16 +4,25 @@
     <meta charset="utf-8">
     <title>Betty Bitchin' Ice Cream</title>
     <link rel="stylesheet" href="main.css">
+    <!-- <link rel="stylesheet" href="bolierplate.css"> -->
   </head>
+
   <body>
     <header>
       <nav>
         <h1>B.B.I.C</h1>
       </nav>
     </header>
-    <div class="top">
-    <main id="thirds">
-      <div class="float-left cf">
+
+    <main class="thirds">
+      <div class="left cf">
+        <ul>
+          <li>Hours 11am-10pm Everyday</li>
+          <br>
+          <li><a href="mailto:fakeemail@fakeemail.com">Email</a></li>
+        </ul>
+      </div>
+      <div class="left cf">
       <p>
         Now Fry, it's been a few years since medical school, so remind me. Disemboweling in your species: fatal or non-fatal?
         Soothe us with sweet lies. You can see how I lived before I met you. Yes. You gave me a dollar and some candy. Switzerland is small and neutral! We are more like Germany, ambitious and misunderstood!
@@ -41,22 +50,24 @@
         THE BIG BRAIN AM WINNING AGAIN! I AM THE GREETEST! NOW I AM LEAVING EARTH, FOR NO RAISEN! Say what? Then throw her in the laundry room, which will hereafter be referred to as "the brig". OK, if everyone's finished being stupid.
       </p>
 
-      <div class="flavors cf">
-        <table class="WD">
+    </div>
+      <div class="left cf">
+        <table class="">
           <thead>
-            <tr>
+            <td>
               Flavor country
-            </tr>
-            <tr>
+            </td>
+            <td>
               Cal Count
-            </tr>
+            </td>
           </thead>
         </table>
       </div>
       </div>
     </main>
-    </div>
+    <hr>
     <footer>
+      put some
     </footer>
 
   </body>
