feat (main) Add Image, Style CSS Add table
Styled Css elements
Added table with elements
Images and sizing added

--- a/index.html
+++ b/index.html
@@ -10,11 +10,18 @@
   <body>
     <header>
       <nav>
-        <h1>B.B.I.C</h1>
+        <h1>Bad Betty's Ice Cream</h1>
+        <ul class="right-side cf">
+          <li><a href="https://www.facebook.com">FaceBook</a></li>
+          <li><a href="https://www.twitter.com">Twiiter</a></li>
+          <li><a href="https://www.wordpress.com">Blog</a></li>
+        </ul>
       </nav>
     </header>
 
     <main class="thirds">
+      <img src="image/ic-banner.jpg" alt="Top Ice Cream Banner" class="banner">
+
       <div class="left cf">
         <ul>
           <li>Hours 11am-10pm Everyday</li>
@@ -23,6 +30,7 @@
         </ul>
       </div>
       <div class="left cf">
+        <h3>Frozen History</h3>
       <p>
         Now Fry, it's been a few years since medical school, so remind me. Disemboweling in your species: fatal or non-fatal?
         Soothe us with sweet lies. You can see how I lived before I met you. Yes. You gave me a dollar and some candy. Switzerland is small and neutral! We are more like Germany, ambitious and misunderstood!
@@ -53,14 +61,61 @@
     </div>
       <div class="left cf">
         <table class="">
-          <thead>
+          <thead class="odd">
             <td>
               Flavor country
             </td>
             <td>
               Cal Count
             </td>
+            <td>Sugar free?
+            </td>
           </thead>
+          <tbody>
+            <tr>
+            <td>
+              <a href="https://en.wikipedia.org/wiki/Mint_chocolate_chip">Manic mint</a>
+            </td>
+            <td>
+              30000 per scoop
+            </td>
+            <td>Negative Ghost rider</td>
+            </tr>
+            <tr class="odd">
+            <td>
+             <a href="https://en.wikipedia.org/wiki/Vanilla_ice_cream">Plain Jane Vanilla</a></td>
+             <td>
+             50 per scoop</td>
+             <td>Aww yeah!</td>
+             </tr>
+             <tr>
+             <td>
+               <a href="https://en.wikipedia.org/wiki/Chocolate_ice_cream">Choco Frozen Dreams</a>
+             </td>
+             <td>
+             450 per scoop </td>
+             <td>Nope</td>
+             </tr>
+             <tr class="odd">
+               <td>
+               <a href="https://en.wikipedia.org/wiki/Strawberry_ice_cream">Manly Strawberry</a></td>
+               <td>
+               450 per scoop</td>
+               <td>Yes and no verisons</td>
+             </tr>
+             <tr>
+              <td>
+              <a href="https://en.wikipedia.org/wiki/Neapolitan_ice_cream">Threeflavor Short Frenchman</a></td>
+              <td>
+              900 per scoop</td>
+              <td>Nah</td>
+             </tr>
+             <tr class="odd">
+               <td colspan ="3" align=center>
+                 More mastered Flavors coming soon!
+               </td>
+             </tr>
+          </tbody>
         </table>
       </div>
       </div>
