--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8">
     <title>Betty Bitchin' Ice Cream</title>
     <link rel="stylesheet" href="main.css">
-    <!-- <link rel="stylesheet" href="bolierplate.css"> -->
+    <link rel="stylesheet" href="wk-01-ic/font-awesome-4.7.0/css/font-awesome.min.css">
   </head>
 
   <body>
     <header>
       <nav>
-        <h1>Bad Betty's Ice Cream</h1>
+        <img src="image/cone-303387_960_720.jpg" alt="logo" class="logo"><h1>Bad Betty's Ice Cream</h1>
         <ul class="right-side cf">
           <li><a href="https://www.facebook.com">FaceBook</a></li>
           <li><a href="https://www.twitter.com">Twiiter</a></li>
@@ -24,7 +24,7 @@
 
       <div class="left cf">
         <ul>
-          <li>Hours 11am-10pm Everyday</li>
+          <li><i class="fa fa-clock-o" aria-hidden="true"></i>Hours 11am-10pm Everyday</li>
           <br>
           <li><a href="mailto:fakeemail@fakeemail.com">Email</a></li>
         </ul>
@@ -72,29 +72,29 @@
             </td>
           </thead>
           <tbody>
-            <tr>
-            <td>
-              <a href="https://en.wikipedia.org/wiki/Mint_chocolate_chip">Manic mint</a>
-            </td>
-            <td>
-              30000 per scoop
-            </td>
-            <td>Negative Ghost rider</td>
+            <tr class="even">
+              <td>
+                <a href="https://en.wikipedia.org/wiki/Mint_chocolate_chip">Manic mint</a>
+              </td>
+              <td>
+                30000 per scoop
+              </td>
+              <td>Negative Ghost rider</td>
             </tr>
             <tr class="odd">
-            <td>
-             <a href="https://en.wikipedia.org/wiki/Vanilla_ice_cream">Plain Jane Vanilla</a></td>
-             <td>
-             50 per scoop</td>
-             <td>Aww yeah!</td>
+              <td>
+               <a href="https://en.wikipedia.org/wiki/Vanilla_ice_cream">Plain Jane Vanilla</a></td>
+               <td>
+               50 per scoop</td>
+               <td>Aww yeah!</td>
              </tr>
-             <tr>
-             <td>
-               <a href="https://en.wikipedia.org/wiki/Chocolate_ice_cream">Choco Frozen Dreams</a>
-             </td>
-             <td>
-             450 per scoop </td>
-             <td>Nope</td>
+             <tr class="even">
+               <td>
+                 <a href="https://en.wikipedia.org/wiki/Chocolate_ice_cream">Choco Frozen Dreams</a>
+               </td>
+               <td>
+               450 per scoop </td>
+               <td>Nope</td>
              </tr>
              <tr class="odd">
                <td>
@@ -103,7 +103,7 @@
                450 per scoop</td>
                <td>Yes and no verisons</td>
              </tr>
-             <tr>
+             <tr class="even">
               <td>
               <a href="https://en.wikipedia.org/wiki/Neapolitan_ice_cream">Threeflavor Short Frenchman</a></td>
               <td>
