feat (main) Add CSS styles

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="utf-8">
     <title>Betty Bitchin' Ice Cream</title>
     <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="wk-01-ic/font-awesome-4.7.0/css/font-awesome.min.css">
+  <script src="https://use.fontawesome.com/361345c355.js"></script>
   </head>
 
   <body>
-    <header>
+    <header>  <img src="image/ic-banner.jpg" alt="Top Ice Cream Banner" class="banner">
       <nav>
-        <img src="image/cone-303387_960_720.jpg" alt="logo" class="logo"><h1>Bad Betty's Ice Cream</h1>
+        <h1>Bad Betty's Ice Cream<i class="fa fa-snowflake-o fa-lg" aria-hidden="true"></i></h1>
         <ul class="right-side cf">
-          <li><a href="https://www.facebook.com">FaceBook</a></li>
+          <li><a href="https://www.facebook.com"><i class="fa fa-facebook fa-3x" aria-hidden="true"></i></a></li>
           <li><a href="https://www.twitter.com">Twiiter</a></li>
           <li><a href="https://www.wordpress.com">Blog</a></li>
         </ul>
@@ -20,13 +20,12 @@
     </header>
 
     <main class="thirds">
-      <img src="image/ic-banner.jpg" alt="Top Ice Cream Banner" class="banner">
 
       <div class="left cf">
         <ul>
-          <li><i class="fa fa-clock-o" aria-hidden="true"></i>Hours 11am-10pm Everyday</li>
+          <li><i class="fa fa-clock-o fa-lg" aria-hidden="true"></i>Hours 11am-10pm Everyday</li>
           <br>
-          <li><a href="mailto:fakeemail@fakeemail.com">Email</a></li>
+
         </ul>
       </div>
       <div class="left cf">
@@ -47,15 +46,6 @@
         I saw you with those two "ladies of the evening" at Elzars. Explain that.
         Oh yeah, good luck with that. She also liked to shut up! A true inspiration for the children. Leela, are you alright? You got wanged on the head.
         Aww, it's true. I've been hiding it for so long. Look, last night was a mistake. I wish! It's a nickel. No, she'll probably make me do it.
-        You won't have time for sleeping, soldier, not with all the bed making you'll be doing. When I was first asked to make a film about my nephew, Hubert Farnsworth, I thought "Why should I?" Then later, Leela made the film. But if I did make it, you can bet there would have been more topless women on motorcycles. Roll film!
-        There's one way and only one way to determine if an animal is intelligent. Dissect its brain! You won't have time for sleeping, soldier, not with all the bed making you'll be doing. The alien mothership is in orbit here. If we can hit that bullseye, the rest of the dominoes will fall like a house of cards. Checkmate.
-        You seem malnourished. Are you suffering from intestinal parasites? Well I'da done better, but it's plum hard pleading a case while awaiting trial for that there incompetence. Large bet on myself in round one.
-        Tell her she looks thin. For example, if you killed your grandfather, you'd cease to exist! Professor, make a woman out of me. I've been there. My folks were always on me to groom myself and wear underpants. What am I, the pope?
-        Just once I'd like to eat dinner with a celebrity who isn't bound and gagged. Aww, it's true. I've been hiding it for so long. Robot 1-X, save my friends! And Zoidberg! And I'm his friend Jesus. Yeah, and if you were the pope they'd be all, "Straighten your pope hat." And "Put on your good vestments."
-        Uh, is the puppy mechanical in any way? Guards! Bring me the forms I need to fill out to have her taken away! I haven't felt much of anything since my guinea pig died. Throw her in the brig. Good news, everyone! I've taught the toaster to feel love!
-        Ven ve voke up, ve had zese wodies. The key to victory is discipline, and that means a well made bed. You will practice until you can make your bed in your sleep. I saw you with those two "ladies of the evening" at Elzars. Explain that.
-        I am the man with no name, Zapp Brannigan! Throw her in the brig. I found what I need. And it's not friends, it's things. You guys go on without me! I'm going to go… look for more stuff to steal!
-        THE BIG BRAIN AM WINNING AGAIN! I AM THE GREETEST! NOW I AM LEAVING EARTH, FOR NO RAISEN! Say what? Then throw her in the laundry room, which will hereafter be referred to as "the brig". OK, if everyone's finished being stupid.
       </p>
 
     </div>
@@ -110,7 +100,7 @@
               900 per scoop</td>
               <td>Nah</td>
              </tr>
-             <tr class="odd">
+             <tr>
                <td colspan ="3" align=center>
                  More mastered Flavors coming soon!
                </td>
@@ -122,7 +112,7 @@
     </main>
     <hr>
     <footer>
-      put some
+      <i class="fa fa-envelope-o fa-lg" aria-hidden="true"></i><a href="mailto:fakeemail@fakeemail.com">Email</a>
     </footer>
 
   </body>
