feat (main) Update images for social

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <h1>Bad Betty's Ice Cream<i class="fa fa-snowflake-o fa-lg" aria-hidden="true"></i></h1>
         <ul class="right-side cf">
           <li><a href="https://www.facebook.com"><i class="fa fa-facebook fa-3x" aria-hidden="true"></i></a></li>
-          <li><a href="https://www.twitter.com">Twiiter</a></li>
-          <li><a href="https://www.wordpress.com">Blog</a></li>
+          <li><a href="https://www.twitter.com"><i class="fa fa-twitter fa-3x" aria-hidden="true"></i></a></li>
+          <li><a href="https://www.wordpress.com"><i class="fa fa-medium fa-3x" aria-hidden="true"></i></a></li>
         </ul>
       </nav>
     </header>
